Revert "footer alignemnt fixed"
This reverts commit 9a5be501d7a4068a32dfa075dbc50d9579037509.

--- a/src/app/_style/app.theme.scss
+++ b/src/app/_style/app.theme.scss
@@ -35,7 +35,7 @@ hr {
 
 .footer {
   background-color: $main-color;
-  //padding-left: 50px;
+  padding-left: 50px;
 }
 
 .modal {
